changed name of files

--- a/notebooks/ta_2_access-water_data.ipynb
+++ b/notebooks/ta_2_access-water_data.ipynb
@@ -14,15 +14,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/thomasadler/opt/anaconda3/lib/python3.9/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "# importing relevant packages and functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_00_packages_functions.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_1_packages_functions.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,11 +168,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>108901</th>\n",
-       "      <td>374664</td>\n",
+       "      <td>374602</td>\n",
        "      <td>Ugandan Water Project</td>\n",
-       "      <td>0.5628549999999947</td>\n",
-       "      <td>32.71715530000001</td>\n",
-       "      <td>2022-07-05T00:00:00.000</td>\n",
+       "      <td>0.6758382999999955</td>\n",
+       "      <td>32.4640283</td>\n",
+       "      <td>2022-09-04T00:00:00.000</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Hand Pump - India Mark II</td>\n",
        "      <td>Hand Pump</td>\n",
@@ -183,10 +192,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>108902</th>\n",
-       "      <td>374614</td>\n",
+       "      <td>374581</td>\n",
        "      <td>Ugandan Water Project</td>\n",
-       "      <td>0.25918240199999415</td>\n",
-       "      <td>32.85991354800001</td>\n",
+       "      <td>0.6553664659999812</td>\n",
+       "      <td>32.472553197</td>\n",
        "      <td>2022-11-05T00:00:00.000</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
@@ -207,11 +216,35 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>108903</th>\n",
-       "      <td>374574</td>\n",
+       "      <td>374572</td>\n",
        "      <td>Ugandan Water Project</td>\n",
-       "      <td>0.9302916999999963</td>\n",
-       "      <td>32.40064999999999</td>\n",
-       "      <td>2022-06-28T00:00:00.000</td>\n",
+       "      <td>0.692485682666941</td>\n",
+       "      <td>32.66798296946349</td>\n",
+       "      <td>2022-06-30T00:00:00.000</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Improved</td>\n",
+       "      <td>Uganda</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ugandan Water Project</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108904</th>\n",
+       "      <td>374644</td>\n",
+       "      <td>Ugandan Water Project</td>\n",
+       "      <td>0.18494999999998163</td>\n",
+       "      <td>32.3369641</td>\n",
+       "      <td>2022-09-06T00:00:00.000</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Hand Pump - India Mark II</td>\n",
        "      <td>Hand Pump</td>\n",
@@ -230,36 +263,12 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108904</th>\n",
-       "      <td>374646</td>\n",
-       "      <td>Ugandan Water Project</td>\n",
-       "      <td>0.3677988330000037</td>\n",
-       "      <td>32.49026399099998</td>\n",
-       "      <td>2022-09-02T00:00:00.000</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Improved</td>\n",
-       "      <td>Uganda</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Ugandan Water Project</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>108905</th>\n",
-       "      <td>374641</td>\n",
+       "      <td>374660</td>\n",
        "      <td>Ugandan Water Project</td>\n",
-       "      <td>0.17714205199999364</td>\n",
-       "      <td>32.33267289599999</td>\n",
-       "      <td>2022-09-06T00:00:00.000</td>\n",
+       "      <td>0.5684852999999981</td>\n",
+       "      <td>32.80591690000001</td>\n",
+       "      <td>2022-09-05T00:00:00.000</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Hand Pump - India Mark II</td>\n",
        "      <td>Hand Pump</td>\n",
@@ -284,24 +293,24 @@
       ],
       "text/plain": [
        "        row_id                 source              lat_deg            lon_deg  \\\n",
-       "108901  374664  Ugandan Water Project   0.5628549999999947  32.71715530000001   \n",
-       "108902  374614  Ugandan Water Project  0.25918240199999415  32.85991354800001   \n",
-       "108903  374574  Ugandan Water Project   0.9302916999999963  32.40064999999999   \n",
-       "108904  374646  Ugandan Water Project   0.3677988330000037  32.49026399099998   \n",
-       "108905  374641  Ugandan Water Project  0.17714205199999364  32.33267289599999   \n",
+       "108901  374602  Ugandan Water Project   0.6758382999999955         32.4640283   \n",
+       "108902  374581  Ugandan Water Project   0.6553664659999812       32.472553197   \n",
+       "108903  374572  Ugandan Water Project    0.692485682666941  32.66798296946349   \n",
+       "108904  374644  Ugandan Water Project  0.18494999999998163         32.3369641   \n",
+       "108905  374660  Ugandan Water Project   0.5684852999999981  32.80591690000001   \n",
        "\n",
        "                    report_date status_id           water_tech_clean  \\\n",
-       "108901  2022-07-05T00:00:00.000       Yes  Hand Pump - India Mark II   \n",
+       "108901  2022-09-04T00:00:00.000       Yes  Hand Pump - India Mark II   \n",
        "108902  2022-11-05T00:00:00.000       Yes                        NaN   \n",
-       "108903  2022-06-28T00:00:00.000       Yes  Hand Pump - India Mark II   \n",
-       "108904  2022-09-02T00:00:00.000       Yes                        NaN   \n",
-       "108905  2022-09-06T00:00:00.000       Yes  Hand Pump - India Mark II   \n",
+       "108903  2022-06-30T00:00:00.000       Yes                        NaN   \n",
+       "108904  2022-09-06T00:00:00.000       Yes  Hand Pump - India Mark II   \n",
+       "108905  2022-09-05T00:00:00.000       Yes  Hand Pump - India Mark II   \n",
        "\n",
        "       _water_tech_category facility_type clean_country_name  ...  \\\n",
        "108901            Hand Pump      Improved             Uganda  ...   \n",
        "108902                  NaN      Improved             Uganda  ...   \n",
-       "108903            Hand Pump      Improved             Uganda  ...   \n",
-       "108904                  NaN      Improved             Uganda  ...   \n",
+       "108903                  NaN      Improved             Uganda  ...   \n",
+       "108904            Hand Pump      Improved             Uganda  ...   \n",
        "108905            Hand Pump      Improved             Uganda  ...   \n",
        "\n",
        "       subjective_quality scheme_id notes photo_lnk lat_deg_original  \\\n",
@@ -321,14 +330,14 @@
        "                                     installer orig_lnk fecal_coliform_value  \n",
        "108901  Ugandan Water Project (rehabilitation)      NaN                  NaN  \n",
        "108902                   Ugandan Water Project      NaN                  NaN  \n",
-       "108903  Ugandan Water Project (rehabilitation)      NaN                  NaN  \n",
-       "108904                   Ugandan Water Project      NaN                  NaN  \n",
+       "108903                   Ugandan Water Project      NaN                  NaN  \n",
+       "108904  Ugandan Water Project (rehabilitation)      NaN                  NaN  \n",
        "108905  Ugandan Water Project (rehabilitation)      NaN                  NaN  \n",
        "\n",
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
