--- a/notebooks/ta_03_access_demographic_data.ipynb
+++ b/notebooks/ta_03_access_demographic_data.ipynb
@@ -11,14 +11,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d35ccf68",
+   "metadata": {},
+   "source": [
+    "We will clean and prepare regional demographic data for further analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "38d861ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing relevant packages and functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_1_packages_functions.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages_functions.py"
    ]
   },
   {
@@ -38,19 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d806984f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defining working directory\n",
-    "data_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/'\n",
-    "dictionary_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data_dictionary/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "2d514732",
    "metadata": {},
    "outputs": [],
@@ -61,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "d7e22e86",
    "metadata": {},
    "outputs": [],
@@ -79,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "f3ab5840",
    "metadata": {},
    "outputs": [],
@@ -90,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "c124efc5",
    "metadata": {},
    "outputs": [
@@ -310,7 +306,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "18f03775",
    "metadata": {},
    "outputs": [],
@@ -336,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "cf201de0",
    "metadata": {},
    "outputs": [
@@ -556,7 +552,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "d8a7bf03",
    "metadata": {},
    "outputs": [
@@ -622,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "5adef2d5",
    "metadata": {},
    "outputs": [
@@ -661,7 +657,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "48d31ef5",
    "metadata": {},
    "outputs": [
@@ -693,7 +689,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "c07b0d85",
    "metadata": {},
    "outputs": [
@@ -748,7 +744,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "cb12d096",
    "metadata": {},
    "outputs": [
@@ -776,7 +772,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "214e884f",
    "metadata": {},
    "outputs": [
@@ -810,7 +806,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "1707f009",
    "metadata": {},
    "outputs": [
@@ -837,7 +833,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "3bdccde3",
    "metadata": {},
    "outputs": [
@@ -859,7 +855,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "ca45d3d5",
    "metadata": {},
    "outputs": [
@@ -979,7 +975,7 @@
        "[1382 rows x 1 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "6acf986a",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1214,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "81dc7700",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1241,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "2af42d47",
    "metadata": {},
    "outputs": [
@@ -1482,7 +1478,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "3babbf46",
    "metadata": {},
    "outputs": [
@@ -1818,7 +1814,7 @@
        "[8 rows x 29 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "257f59bd",
    "metadata": {},
    "outputs": [
@@ -2053,7 +2049,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2068,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "529ba1e3",
    "metadata": {},
    "outputs": [
@@ -2125,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "ff6e0c8a",
    "metadata": {},
    "outputs": [
@@ -2178,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "b894e028",
    "metadata": {},
    "outputs": [
@@ -2199,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "47452a85",
    "metadata": {},
    "outputs": [],
@@ -2211,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "2fa89744",
    "metadata": {},
    "outputs": [],
@@ -2222,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "feef5e64",
    "metadata": {},
    "outputs": [
@@ -2233,7 +2229,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
