--- a/notebooks/ta_04_access_conflict_data.ipynb
+++ b/notebooks/ta_04_access_conflict_data.ipynb
@@ -14,8 +14,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3dcef79",
+   "metadata": {},
+   "source": [
+    "Here, we are cleaning data from inidividual conflict events from the ACLED API."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b6c14b95",
    "metadata": {},
    "outputs": [
@@ -30,12 +38,12 @@
    ],
    "source": [
     "# importing relevant packages and functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_1_packages_functions.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages_functions.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e0e0fe54",
    "metadata": {},
    "outputs": [],
@@ -46,19 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6ca1e2b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#defining working directory\n",
-    "data_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/'\n",
-    "dictionary_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data_dictionary/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ff21a6e0",
    "metadata": {},
    "outputs": [],
@@ -68,8 +64,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2dd1135c",
+   "metadata": {},
+   "source": [
+    "We want to get every single conflict event that happened in Uganda since 1997 (the start of the dataset)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "98348787",
    "metadata": {},
    "outputs": [],
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "92efe247",
    "metadata": {},
    "outputs": [],
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a8623c3b",
    "metadata": {},
    "outputs": [],
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "859c14dd",
    "metadata": {},
    "outputs": [
@@ -333,7 +337,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "213f7315",
    "metadata": {},
    "outputs": [
@@ -401,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "62a65bcc",
    "metadata": {},
    "outputs": [
@@ -467,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "28a7040f",
    "metadata": {},
    "outputs": [
@@ -488,7 +492,7 @@
        "Name: event_date, Length: 7854, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e06fb17d",
    "metadata": {},
    "outputs": [
@@ -554,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "6866e61e",
    "metadata": {},
    "outputs": [
@@ -587,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "12f7dafe",
    "metadata": {},
    "outputs": [],
@@ -604,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "14c7374e",
    "metadata": {},
    "outputs": [
@@ -625,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "b48b70c9",
    "metadata": {},
    "outputs": [],
@@ -636,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "7e4fac0f",
    "metadata": {},
    "outputs": [
@@ -647,7 +651,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "439414dc",
    "metadata": {},
    "outputs": [],
@@ -670,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "9e03b8c0",
    "metadata": {},
    "outputs": [],
