--- a/notebooks/ta_09_decision_tree.ipynb
+++ b/notebooks/ta_09_decision_tree.ipynb
@@ -23,7 +23,7 @@
    ],
    "source": [
     "# importing relevant packages and functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_1_packages_functions.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages_functions.py"
    ]
   },
   {
@@ -664,15 +664,10 @@
     "             ('DT', DecisionTreeClassifier())]\n",
     "\n",
     "# defining distribution of parameters we want to compare\n",
-    "param_dist = [{\"DT__criterion\": ['gini', 'entropy'],\n",
+    "param_dist = {\"DT__criterion\": ['gini', 'entropy'],\n",
     "'DT__max_depth': max_depth_range,\n",
     "'DT__min_samples_leaf': min_samples_leaf_range,\n",
-    " 'reduce_dim__n_components': np.arange(0.5, 0.9, 0.1)},\n",
-    "\n",
-    "{\"DT__criterion\": ['gini', 'entropy'],\n",
-    "'DT__max_depth': max_depth_range,\n",
-    "'DT__min_samples_leaf': min_samples_leaf_range,\n",
-    " 'reduce_dim': [None]}]\n",
+    "'reduce_dim__n_components': [0.5, 0.6, 0.7, 0.8, 0.9, None]}\n",
     "\n",
     "# run cross validation\n",
     "pipeline_cross_val_random(estimator, param_dist, X_train_res, y_train_res, X_test, y_test)"
