--- a/notebooks/ta_11_gaussian_naive_bayes.ipynb
+++ b/notebooks/ta_11_gaussian_naive_bayes.ipynb
@@ -23,7 +23,7 @@
    ],
    "source": [
     "# importing relevant packages and functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_1_packages_functions.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages_functions.py"
    ]
   },
   {
@@ -382,8 +382,7 @@
     "('GNB', GaussianNB())]\n",
     "\n",
     "# defining distribution of parameters we want to compare\n",
-    "param = [{'reduce_dim__n_components': np.arange(0.5, 0.9, 0.05)},\n",
-    "{'reduce_dim': [None]}]\n",
+    "param = {'reduce_dim__n_components': [0.5, 0.6, 0.7, 0.8, 0.9, None]}\n",
     "\n",
     "# run cross validation\n",
     "pipeline_cross_val_grid(estimator, param, X_train_res, y_train_res, X_test, y_test)"
