--- a/notebooks/ta_12_support_vector_machine.ipynb
+++ b/notebooks/ta_12_support_vector_machine.ipynb
@@ -23,7 +23,7 @@
    ],
    "source": [
     "# importing relevant packages and functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_1_packages_functions.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages_functions.py"
    ]
   },
   {
@@ -482,7 +482,7 @@
    ],
    "source": [
     "# setting up which models/scalers we want to grid search\n",
-    "estimator = [('scaler', StandardScaler()), ('reduce_dim', PCA()), ('SVC', LinearSVC(max_iter=500))]\n",
+    "estimator = [('scaler', StandardScaler()), ('SVC', LinearSVC(max_iter=500))]\n",
     "\n",
     "# defining distribution of parameters we want to compare\n",
     "param = {\"SVC__C\": c_range,\n",
