--- a/notebooks/ta_13_adaboost.ipynb
+++ b/notebooks/ta_13_adaboost.ipynb
@@ -23,7 +23,7 @@
    ],
    "source": [
     "# importing relevant packages and functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_1_packages_functions.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages_functions.py"
    ]
   },
   {
@@ -524,11 +524,8 @@
     "estimator = [('reduce_dim', PCA()), ('AB', AdaBoostClassifier(n_estimators=100, random_state=rand_seed))]\n",
     "\n",
     "# defining distribution of parameters we want to compare\n",
-    "param_distrib = [{'AB__learning_rate': learning_rate_range,\n",
-    "'reduce_dim__n_components': np.arange(0.5, 0.9, 0.1)},\n",
-    "\n",
-    "{'AB__learning_rate': learning_rate_range,\n",
-    "'reduce_dim__n_components': [None]}]\n",
+    "param_distrib = {'AB__learning_rate': learning_rate_range,\n",
+    "'reduce_dim__n_components': [0.5, 0.6, 0.7, 0.8, 0.9, None]}\n",
     "\n",
     "# run cross validation\n",
     "pipeline_cross_val_random(estimator, param_distrib, X_train_res, y_train_res, X_test, y_test)"
