--- a/notebooks/ta_16_wpdx_model_extract.ipynb
+++ b/notebooks/ta_16_wpdx_model_extract.ipynb
@@ -16,17 +16,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/thomasadler/opt/anaconda3/lib/python3.9/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "# importing relevant packages and functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_1_packages_functions.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages_functions.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defining working directory\n",
-    "filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +314,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +415,7 @@
        "0"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +497,7 @@
        "Name: y_prediction_wpdx, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +550,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +760,7 @@
        "0                        0.87                     0.92                 0.89  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
