--- a/capstone/notebooks/ta_04_access_conflict_data.ipynb
+++ b/capstone/notebooks/ta_04_access_conflict_data.ipynb
@@ -684,7 +684,7 @@
     "    uganda_conflict_df_upper[col] = uganda_conflict_df_upper[col].str.upper()\n",
     "\n",
     "#export to cleaned dataset to csv\n",
-    "uganda_conflict_df_upper.to_csv(data_filepath + 'ta_3_conflict_df_clean_upper.csv')\n"
+    "uganda_conflict_df_upper.to_csv(data_filepath + 'ta_3_conflict_df_clean_upper.csv')"
    ]
   }
  ],
