--- a/_notebooks/ta_17_model_comparison.ipynb
+++ b/_notebooks/ta_17_model_comparison.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Uganda Water Infrastructure\n",
+    "\n",
+    "- toc: false\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [fastpages, jupyter]\n",
+    "- hide: false\n",
+    "- search_exclude: true\n",
+    "- metadata_key1: metadata_value1\n",
+    "- metadata_key2: metadata_value2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Model comparison"
    ]
   },
