--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: \"My Title\"\n",
-    "description: \"Awesome description\"\n",
-    "layout: post\n",
-    "toc: false\n",
-    "comments: true\n",
-    "hide: false\n",
-    "search_exclude: true\n",
-    "categories: [fastpages, jupyter]\n",
-    "metadata_key1: metadata_value1\n",
-    "metadata_key2: metadata_value2\n",
-    "---"
+    "# Accessing water point data from the Water Point Dataset Exchange"
    ]
   },
   {
