--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Accessing water point data from the Water Point Dataset Exchange"
+    "# \"Water point data\"\n",
+    "> \"Accessing water point data from the Water Point Dataset Exchange\"\n",
+    "\n",
+    "- toc:true- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- author: Thomas Adler\n",
+    "- categories: [fastpages, jupyter]"
    ]
   },
   {
