--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -11,6 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/man_dog.jpeg\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
