--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -7,11 +7,11 @@
     "# \"Water point data\"\n",
     "> \"Accessing water point data from the Water Point Dataset Exchange\"\n",
     "\n",
-    "- toc:true- branch: master\n",
+    "- toc:true\n",
+    "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
-    "- image: images/man_dog.jpeg\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
