--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Water point data\n",
     "> \"Accessing water point data from the Water Point Dataset Exchange\"\n",
-    "- toc: true\n",
+    "- toc: false\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
