--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Water point data\n",
     "> \"Accessing water point data from the Water Point Dataset Exchange\"\n",
-    "- toc: false\n",
+    "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
-    "- images: images/wpdx_logo.png\n",
+    "- images: images/white_pic.jpeg\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
