--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -11,7 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
-    "- images: ![](images/wpdx_logo.png)\n",
+    "- images: images/wpdx_logo.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
