--- a/_notebooks/ta_14_xgboost.ipynb
+++ b/_notebooks/ta_14_xgboost.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# XGBoost\n",
+    "- toc: true\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- author: Thomas Adler\n",
+    "- categories: [fastpages, jupyter]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# XGBoost"
    ]
   },
