--- a/_notebooks/ta_03_access_demographic_data.ipynb
+++ b/_notebooks/ta_03_access_demographic_data.ipynb
@@ -12,6 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/ubos_logo.jpeg\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
