--- a/_notebooks/ta_11_gaussian_naive_bayes.ipynb
+++ b/_notebooks/ta_11_gaussian_naive_bayes.ipynb
@@ -10,6 +10,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/bayes.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
