--- a/_notebooks/ta_17_model_comparison.ipynb
+++ b/_notebooks/ta_17_model_comparison.ipynb
@@ -11,6 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/comparison.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
