--- a/_notebooks/ta_04_access_conflict_data.ipynb
+++ b/_notebooks/ta_04_access_conflict_data.ipynb
@@ -12,6 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/acled_logo.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
