--- a/_notebooks/ta_05_master_dataframe.ipynb
+++ b/_notebooks/ta_05_master_dataframe.ipynb
@@ -12,6 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/panda.jpeg\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
