--- a/_notebooks/ta_08_k_nearest_neighbors.ipynb
+++ b/_notebooks/ta_08_k_nearest_neighbors.ipynb
@@ -10,6 +10,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/neighbours.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
