--- a/_notebooks/ta_09_decision_tree.ipynb
+++ b/_notebooks/ta_09_decision_tree.ipynb
@@ -10,6 +10,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/tree.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
