--- a/_notebooks/ta_14_xgboost.ipynb
+++ b/_notebooks/ta_14_xgboost.ipynb
@@ -10,6 +10,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/xgboost.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
