--- a/_notebooks/ta_16_wpdx_model_extract.ipynb
+++ b/_notebooks/ta_16_wpdx_model_extract.ipynb
@@ -11,6 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/wpdx_model.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
