--- a/_notebooks/ta_99_ARCHIVED_eda.ipynb
+++ b/_notebooks/ta_99_ARCHIVED_eda.ipynb
@@ -12,6 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
+    "- image: images/uganda_flag.png\n",
     "- categories: [fastpages, jupyter]"
    ]
   },
