--- a/_notebooks/ta_05_master_dataframe.ipynb
+++ b/_notebooks/ta_05_master_dataframe.ipynb
@@ -2029,7 +2029,7 @@
    "id": "ef734e91",
    "metadata": {},
    "source": [
-    "These graphs show us that the median is a better alternative to mean as it is more representative of our dataset."
+    "These graphs show us that the median is a better alternative to mean as it is more representative of our dataset. There are more observations which are closer to the median value than to the average value because the latter is more sensitive to outliers."
    ]
   },
   {
