--- a/_notebooks/ta_07_logistic_regression.ipynb
+++ b/_notebooks/ta_07_logistic_regression.ipynb
@@ -544,9 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scree plot above shows us the percentage of variance explained by each number of principal components. For example, the first principal component explains close to 3/4ths of the variance. As we add more principal components, the marginal improvement in explained variance slowly decreases. We get to around 100% of explained variance at around the 15th principal component (out of 32 principal components, as we have 32 features)\n",
-    "\n",
-    "It seems that most of our principal components are important in explaining the variance in our dataset. This is probably due to the thorough feature engineering we did to cut down from more than 70 columns to our current 32. Although we will test whether reducing dimensions through PCA will improves our model accuracy, we do not expect it as all variables seem important in explaining the variance in our data."
+    "The scree plot above shows us the percentage of variance explained by each number of principal components. For example, the first principal component explains close to 3/4ths of the variance. As we add more principal components, the marginal improvement in explained variance slowly decreases. We get to around 100% of explained variance at around the 15th principal component (out of 32 principal components, as we have 32 features)"
    ]
   },
   {
@@ -836,7 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The precision/recall curve is not a very useful visualisation so we will refrain from visualising these plots in the future."
+    "The precision/recall curve is not a very useful visualisation as we care mostly about the recall score, and not so much it's relationship with precision. We will refrain from visualising these plots in the future."
    ]
   },
   {
