--- a/_notebooks/ta_17_model_comparison.ipynb
+++ b/_notebooks/ta_17_model_comparison.ipynb
@@ -19,23 +19,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Uganda Water Infrastructure\n",
-    "\n",
-    "- toc: false\n",
-    "- branch: master\n",
-    "- badges: true\n",
-    "- comments: true\n",
-    "- categories: [fastpages, jupyter]\n",
-    "- hide: false\n",
-    "- search_exclude: true\n",
-    "- metadata_key1: metadata_value1\n",
-    "- metadata_key2: metadata_value2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Model comparison"
    ]
   },
@@ -1399,7 +1382,7 @@
     "\n",
     "On the other hand, our model performs not as well on the precision of non-functioning points and recall of functioning points.\n",
     "\n",
-    "Overall, our model outperforms WPDx model and is a net improvement. We will quantify these improvements in our subsequent analysis."
+    "Overall, our model outperforms WPDx model and is a net improvement. It seems that introducing demographic and conflict data has enables us to better predict non-functioning water points. This is because water point functionality is closely intertwined with the political, social and economic landscape of a community and region. We will quantify these improvements in our subsequent analysis."
    ]
   },
   {
