--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uganda and sub-saharan Africa lack access to basic water services. Not having access to water puts lives at risk through improper sanitation, dehydration. It also reinforce the cycle of poverty and heavily impacts a population that heavily relies on subsistence farming. We want to enable the Ugandan government to repair water point quicker so citizens can have their basic needs and help communities develop and prosper."
+    "Uganda and sub-saharan Africa lack access to basic water services. Not having access to water puts lives at risk through improper sanitation, dehydration. It also reinforces the cycle of poverty and heavily impacts a population that heavily relies on subsistence farming. We want to enable the Ugandan government to repair and improve water points quicker and in a more efficient manner. Our model would be used on a monthly/yearly basis to plan and carry out repairs and improvements so that the population will benefit form as much water access as possible. Ideally, the on the ground actions that result from our predictions will get fed back into the model, so it can improve it's performance in the future. Ultimately we want Ugandan citizens to meet their basic needs and enable their communities to develop and prosper."
    ]
   },
   {
@@ -40,7 +40,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Can we predict the functionality of water infrastructure to repair them quicker using Machine Learning?**"
+    "**Can we predict the functionality of water infrastructure to repair them quicker using Machine Learning?**\n",
+    "\n",
+    "Alternatively,\n",
+    "\n",
+    "**Using demographic, water infrastructure, and conflict data, can we develop a classification model that is able to identify non-functioning water points with a recall score greater than 40%?\"**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Water and Conflict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Water infrastructure and water access has been found to be a factor contributing to conflicts. However, the main findings form research is that demographic (socio-economic) situations are usually much more important in explaining conflict. This is why we will be using both to try to predict water functionality.\n",
+    "\n",
+    "**Relevant papers:**\n",
+    "- [Detges, 2016](https://journals.sagepub.com/doi/10.1177/0022343316651922)\n",
+    "- [Detges, 2017](https://www.sciencedirect.com/science/article/abs/pii/S0962629816302360)\n",
+    "- [Ide et al, 2020](https://journals.sagepub.com/doi/10.1177/0022343320910777)\n",
+    "- [Theisen et al, 2012](https://www.hbuhaug.com/wp-content/uploads/2014/02/IS-2011-for-web.pdf)"
    ]
   },
   {
@@ -694,6 +718,13 @@
     "\n",
     "# check\n",
     "uganda_water_df_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**CAREFUL, INADVENRTETLY DROPPED `is_urban` due to mistake. If re-running the analysis, should account for this error.**"
    ]
   },
   {
