--- a/_notebooks/ta_02_access-water_data.ipynb
+++ b/_notebooks/ta_02_access-water_data.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Water point data\n",
+    "# 1. Water point data\n",
     "> \"Accessing water point data from the Water Point Dataset Exchange\"\n",
     "- toc: true\n",
+    "- sticky_rank: 1\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
