--- a/_notebooks/ta_03_access_demographic_data.ipynb
+++ b/_notebooks/ta_03_access_demographic_data.ipynb
@@ -5,10 +5,11 @@
    "id": "9523aad3",
    "metadata": {},
    "source": [
-    "# Demographic data\n",
+    "# 2. Demographic data\n",
     "> \"Accessing demographic data from the Ugandan Bureau of Statistics\"\n",
     "- toc: true\n",
     "- branch: master\n",
+    "- sticky_rank: 2\n",
     "- badges: true\n",
     "- comments: true\n",
     "- author: Thomas Adler\n",
