--- a/_notebooks/ta_04_access_conflict_data.ipynb
+++ b/_notebooks/ta_04_access_conflict_data.ipynb
@@ -5,7 +5,7 @@
    "id": "02482bec",
    "metadata": {},
    "source": [
-    "# Conflict data\n",
+    "# 3. Conflict data\n",
     "> \"Accessing conflict data from the Armed Conflict Location & Event Data Project\"\n",
     "- toc: true\n",
     "- branch: master\n",
