--- a/_notebooks/ta_05_master_dataframe.ipynb
+++ b/_notebooks/ta_05_master_dataframe.ipynb
@@ -5,7 +5,7 @@
    "id": "b14246fe",
    "metadata": {},
    "source": [
-    "# Master dataframe\n",
+    "# 4. Master dataframe\n",
     "> \"Creating master dataframe, combining water point, demographic and conflict data\"\n",
     "- toc: true\n",
     "- branch: master\n",
