--- a/_notebooks/ta_07_logistic_regression.ipynb
+++ b/_notebooks/ta_07_logistic_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic Regression\n",
+    "# 6. Logistic Regression\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
@@ -598,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best model here seems to have a much lower accuracy score, but hopefully it scores better on its precision and recall scores for non-functioning water points. Interestingly, the best model does not use PCA to reduce dimensions."
+    "The best model here seems to have a much lower accuracy score, but hopefully it scores better on its precision and recall scores for non-functioning water points. Interestingly, the best model does not use PCA to reduce dimensions. It seems that regularising with L2 (Ridge) is a better alternative than PCA dimensionality reduction. L2 reduces the number of features by decreasing certain coefficients to (or close to) 0."
    ]
   },
   {
