--- a/_notebooks/ta_08_k_nearest_neighbors.ipynb
+++ b/_notebooks/ta_08_k_nearest_neighbors.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# K Nearest Neighbours\n",
+    "# 7. K Nearest Neighbours\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
