--- a/_notebooks/ta_09_decision_tree.ipynb
+++ b/_notebooks/ta_09_decision_tree.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decision Tree\n",
+    "# 8. Decision Tree\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
