--- a/_notebooks/ta_10_random_forest.ipynb
+++ b/_notebooks/ta_10_random_forest.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Random Forest\n",
+    "# 9. Random Forest\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
