--- a/_notebooks/ta_11_gaussian_naive_bayes.ipynb
+++ b/_notebooks/ta_11_gaussian_naive_bayes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Naive Bayes\n",
+    "# 10. Naive Bayes\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
