--- a/_notebooks/ta_13_adaboost.ipynb
+++ b/_notebooks/ta_13_adaboost.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AdaBoost\n",
+    "# 12. AdaBoost\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
