--- a/_notebooks/ta_14_xgboost.ipynb
+++ b/_notebooks/ta_14_xgboost.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XGBoost\n",
+    "# 13. XGBoost\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
