--- a/_notebooks/ta_16_wpdx_model_extract.ipynb
+++ b/_notebooks/ta_16_wpdx_model_extract.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WPDx Model\n",
+    "# 15. WPDx Model\n",
     "> \"Extracting predictions from the WPDx model for further comparison\"\n",
     "- toc: true\n",
     "- branch: master\n",
