--- a/_notebooks/ta_17_model_comparison.ipynb
+++ b/_notebooks/ta_17_model_comparison.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Comparison\n",
+    "# 16. Model Comparison\n",
     "> \"Comparing and choosing best performing model\"\n",
     "- toc: true\n",
     "- branch: master\n",
