--- a/_notebooks/ta_12_support_vector_machine.ipynb
+++ b/_notebooks/ta_12_support_vector_machine.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Support Vector Machine\n",
+    "# 11. Support Vector Machine\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
