--- a/_notebooks/ta_15_neural_networks.ipynb
+++ b/_notebooks/ta_15_neural_networks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural Network\n",
+    "# 14. Neural Network\n",
     "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
